crates/math-core/tests/snapshots/error_test__wrong_opening_paren.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\begin[matrix} x \\end{matrix}"
---
Error: Disallowed character in text group: '['.
   ╭─[ <input>:1:7 ]
   │
 1 │ \begin[matrix} x \end{matrix}
   │       ┬  
   │       ╰── disallowed character
───╯
